Update Django X-Talk Template

--- a/webthings-talk/webthingstalk/templates/xtalk/index.html
+++ b/webthings-talk/webthingstalk/templates/xtalk/index.html
@@ -68,7 +68,7 @@
         </div>
 
         <div class="row mb-2 align-items-center" id="device_base_block">
-          <label class="col-sm-3">Gateway or Native Base</label>
+          <label class="col-sm-3">Connection Type</label>
           <div class="col-sm-6">{{ form.device_base }}</div>
         </div>
 
